--- a/geral.html
+++ b/geral.html
@@ -18,7 +18,7 @@
 		top: 0;
 		width: 100%;
 		background-color: white;
-		display: flex;
+		display: fixed;
 		justify-content: space-between; 
 		align-items: center;
 		padding: 10px 40px 10px 20px; /* top right bottom left */
@@ -552,4 +552,5 @@
     };
   </script>
 </body>
+
 </html>
