--- a/geral.html
+++ b/geral.html
@@ -41,7 +41,7 @@
 		color: white;
 		border: none;
 		border-radius: 400px;
-		position: flex;
+		position: fixed;
 		cursor: pointer;
 		font-size: 24px;
 		padding: 6px 15px;
@@ -554,3 +554,4 @@
 </body>
 
 </html>
+
