--- a/supervisor.html
+++ b/supervisor.html
@@ -147,14 +147,15 @@
 	}
 
 	.select-group {
-		display: flex;
+		display: fixed;
 		justify-content: center;
 		background-color: white;
 		gap: 15px;
 		margin-bottom: 15px;
-		flex-wrap: wrap;
-		
+		flex-wrap: wrap;	
 	}
+	
+	
 </style>
 </head>
 <body>
@@ -563,19 +564,62 @@
         f.addEventListener("mouseleave",()=>document.body.style.overflow="auto");
       });
     }
- // ==================== JANELA DE SELEÇÃO ====================
-    window.onload = async () => {
-      if(!userData.name) { window.location.href="index.html"; return; }
-      await carregarUsuarios();
-      document.getElementById("defaultOpen").click();
+	
+  // ==================== NOVO: DETECTAR CELULAR E ADICIONAR BOTÃO DE EDIÇÃO ====================
+  function verificarMobileEForcarLinks() {
+    const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+    if (!isMobile) return; // só executa no celular
 
-      abrirCampanhaSelecionada();
-      abrirPEXSelecionada();
-      abrirFornecedorSelecionada();
-      abrirGestaoSelecionada();
+    document.querySelectorAll("iframe").forEach(iframe => {
+      const src = iframe.src;
+      if (src && src.includes("docs.google.com/spreadsheets")) {
+        // cria um aviso e um botão logo abaixo do iframe
+        const aviso = document.createElement("p");
+        aviso.innerText = "🔒 Visualização apenas — toque abaixo para editar:";
+        aviso.style.color = "#555";
+        aviso.style.fontSize = "16px";
+        aviso.style.margin = "14px 0 6px 0";
+        aviso.style.fontFamily = "Merriweather, sans-serif";
 
-      bloquearScrollDuranteUsoIframe();
-    };
+        const btn = document.createElement("a");
+        btn.href = src;
+        btn.target = "_blank";
+        btn.innerText = "✏️ Abrir planilha no Google Sheets";
+        btn.style.display = "inline-block";
+        btn.style.marginBottom = "25px";
+        btn.style.padding = "10px 20px";
+        btn.style.fontSize = "18px";
+        btn.style.color = "white";
+        btn.style.backgroundColor = "#007bff";
+        btn.style.borderRadius = "8px";
+        btn.style.textDecoration = "none";
+        btn.style.fontFamily = "Merriweather, sans-serif";
+        btn.style.boxShadow = "0 2px 6px rgba(0,0,0,0.2)";
+        btn.style.transition = "0.2s";
+
+        btn.onmouseenter = () => btn.style.backgroundColor = "#0056b3";
+        btn.onmouseleave = () => btn.style.backgroundColor = "#007bff";
+
+        iframe.insertAdjacentElement("afterend", aviso);
+        aviso.insertAdjacentElement("afterend", btn);
+      }
+    });
+  }
+
+  // ==================== JANELA DE SELEÇÃO ====================
+  window.onload = async () => {
+    if(!userData.name) { window.location.href="index.html"; return; }
+    await carregarUsuarios();
+    document.getElementById("defaultOpen").click();
+
+    abrirCampanhaSelecionada();
+    abrirPEXSelecionada();
+    abrirFornecedorSelecionada();
+    abrirGestaoSelecionada();
+
+    bloquearScrollDuranteUsoIframeS();
+    verificarMobileEForcarLinks(); // 👈 adiciona botão no celular
+  };
   </script>
 </body>
 </html>
